--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -3,14 +3,15 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #1A1A1D;
+    background-color: #c3c7d8;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background: #FFFFFF;
+    background: #c3c7d8;
+    box-shadow: 6px 6px 9px #979ba9, -4px -4px 9px rgba(255, 255, 255, 0.6);
     border-radius: 8px;
     height: 60%;
     width: 35%;
@@ -20,7 +21,6 @@
     .outerContainer {
         height: 100%;
     }
-
     .container {
         width: 100%;
         height: 100%;
