--- a/client/src/components/InfoBar/InfoBar.css
+++ b/client/src/components/InfoBar/InfoBar.css
@@ -2,10 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #2979FF;
+    background: #c3c7d8;
     border-radius: 4px 4px 0 0;
     height: 60px;
-    width: 100%;
+    margin: 0 10px;
+    border-bottom: 1px solid white;
 }
 
 .leftInnerContainer {
