--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -1,14 +1,37 @@
 .form {
     display: flex;
-    border-top: 2px solid #D3D3D3;
+    justify-content: space-between;
+    border-radius: 25px;
+    width: 90%;
+    margin: auto auto 5% auto;
 }
 
 .input {
     border: none;
-    border-radius: 0;
-    padding: 5%;
+    border-radius: 25px;
+    padding: 5px 20px;
     width: 80%;
-    font-size: 1.2em;
+    font-size: 1em;
+    color: #777777;
+    background-color: #c3c7d8;
+    box-shadow: 2px 2px 5px #979ba9, -2px -2px 5px rgba(255, 255, 255, 0.6);
+}
+
+@keyframes shadow {
+    0% {
+        box-shadow: 2px 2px 2px #979ba9, -2px -2px 5px rgba(255, 255, 255, 0.6);
+    }
+    50% {
+        box-shadow: 0 0 0 #979ba9, 0 0 0 rgba(255, 255, 255, 0.6);
+    }
+    100% {
+        box-shadow: inset 3px 3px 2px #979ba9, 2px 2px 5px rgba(255, 255, 255, 0.6);
+    }
+}
+
+.input:focus {
+    transition: 200ms;
+    animation: shadow 200ms forwards;
 }
 
 input:focus, textarea:focus, select:focus {
@@ -16,12 +39,19 @@ input:focus, textarea:focus, select:focus {
 }
 
 .sendButton {
-    color: #fff !important;
+    color: #6A749C !important;
+    width: 30px;
+    height: 30px;
+    font-size: 1.2em;
+    border-radius: 50%;
     text-transform: uppercase;
     text-decoration: none;
-    background: #2979FF;
-    padding: 20px;
-    display: inline-block;
+    background: #c3c7d8;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: none;
-    width: 20%;
+    background-color: #c3c7d8;
+    box-shadow: 2px 2px 5px #979ba9, -2px -2px 5px rgba(255, 255, 255, 0.6);
 }
