--- a/client/src/components/Join/Join.css
+++ b/client/src/components/Join/Join.css
@@ -18,22 +18,22 @@ html, body {
     text-align: center;
     height: 100vh;
     align-items: center;
-    background-color: #2F2F2F;
+    background-color: #c3c7d8;
 }
 
 .joinInnerContainer {
     width: 350px;
     padding: 50px;
     border-radius: 10px;
-    background-color: #2F2F2F;
-    box-shadow: 6px 6px 9px #1D1D1D, -6px -6px 9px #383838;
+    background-color: #c3c7d8;
+    box-shadow: 6px 6px 9px #979ba9, -4px -4px 9px rgba(255, 255, 255, 0.6);
 }
 
 .joinInput {
     border-radius: 5px;
     border: none;
-    background-color: #2F2F2F;
-    box-shadow: 2px 2px 5px #1D1D1D, -2px -2px 5px #383838;
+    background-color: #c3c7d8;
+    box-shadow: 2px 2px 5px #979ba9, -2px -2px 5px rgba(255, 255, 255, 0.6);
     padding: 15px 20px;
     width: 100%;
     color: #777777;
@@ -41,18 +41,18 @@ html, body {
 }
 
 @keyframes shadow {
-    0%{
-        box-shadow: 2px 2px 2px #1D1D1D, -2px -2px 5px #383838;
+    0% {
+        box-shadow: 2px 2px 2px #979ba9, -2px -2px 5px rgba(255, 255, 255, 0.6);
     }
-    50%{
-        box-shadow: 0 0 0 #1D1D1D, 0 0 0 #383838;
+    50% {
+        box-shadow: 0 0 0 #979ba9, 0 0 0 rgba(255, 255, 255, 0.6);
     }
-    100%{
-        box-shadow: inset 3px 3px 2px #1D1D1D, 3px 3px 5px #383838;
+    100% {
+        box-shadow: inset 3px 3px 2px #979ba9, 2px 2px 5px rgba(255, 255, 255, 0.6);
     }
 }
 
-.joinInput:focus{
+.joinInput:focus {
     transition: 200ms;
     animation: shadow 200ms forwards;
 }
@@ -66,11 +66,14 @@ html, body {
 }
 
 .button {
-    color: #fff !important;
+    color: #6A749C !important;
+    text-align: left;
+    font-size: 16px;
+    font-weight: 700;
     text-transform: uppercase;
     text-decoration: none;
-    background: #0f2750;
-    box-shadow: 3px 3px 5px #1D1D1D, -3px -3px 5px #2f3746;
+    background-color: #c3c7d8;
+    box-shadow: 2px 2px 5px #979ba9, -2px -2px 5px rgba(255, 255, 255, 0.6);
     padding: 20px;
     border-radius: 5px;
     display: inline-block;
@@ -86,12 +89,9 @@ html, body {
     .joinOuterContainer {
         height: 100%;
     }
-
     .joinInnerContainer {
         width: 90%;
     }
-
-
 }
 
 button:focus {
