--- a/client/src/components/Message/Message.css
+++ b/client/src/components/Message/Message.css
@@ -1,9 +1,11 @@
 .messageBox {
-    background: #F3F3F3;
-    border-radius: 20px;
-    padding: 5px 20px;
+    background: #c3c7d8;
+    border-radius: 3px;
+    padding: 0 10px;
     color: white;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     max-width: 80%;
 }
 
@@ -11,8 +13,9 @@
     width: 100%;
     letter-spacing: 0;
     float: left;
-    font-size: 1.1em;
+    font-size: 0.8em;
     word-wrap: break-word;
+    margin: 0;
 }
 
 .messageText img {
@@ -26,20 +29,26 @@
     margin-top: 3px;
 }
 
+.messageContainer.admin .messageBox {
+    background-color: #AA3939;
+}
+
 .sentText {
     display: flex;
     align-items: center;
     font-family: Helvetica;
     color: #828282;
     letter-spacing: 0.3px;
+    margin: 5px 0;
+    font-size: 0.9em;
 }
 
 .pl-10 {
-    padding-left: 10px;
+    padding-left: 5px;
 }
 
 .pr-10 {
-    padding-right: 10px;
+    padding-right: 5px;
 }
 
 .justifyStart {
@@ -55,13 +64,13 @@
 }
 
 .colorDark {
-    color: #353535;
+    color: white;
 }
 
 .backgroundBlue {
-    background: #2979FF;
+    background: #2E4372;
 }
 
 .backgroundLight {
-    background: #F3F3F3;
+    background: #828282;
 }
